Fix ML notebook: Drop ID columns before training models

--- a/notebooks/troon_ml_models.ipynb
+++ b/notebooks/troon_ml_models.ipynb
@@ -77,6 +77,10 @@
         "df_churn = session.table(\"TROON_INTELLIGENCE.ANALYTICS.V_CHURN_RISK_FEATURES\")\n",
         "train_churn, test_churn = df_churn.random_split([0.8, 0.2], seed=42)\n",
         "\n",
+        "# Drop ID columns not needed for training\n",
+        "train_churn = train_churn.drop(\"MEMBER_ID\")\n",
+        "test_churn = test_churn.drop(\"MEMBER_ID\")\n",
+        "\n",
         "# Define Pipeline\n",
         "churn_pipeline = Pipeline([\n",
         "    (\"Classifier\", RandomForestClassifier(\n",
@@ -124,6 +128,10 @@
         "df_noshow = session.table(\"TROON_INTELLIGENCE.ANALYTICS.V_NO_SHOW_FEATURES\")\n",
         "train_noshow, test_noshow = df_noshow.random_split([0.8, 0.2], seed=42)\n",
         "\n",
+        "# Drop ID columns not needed for training\n",
+        "train_noshow = train_noshow.drop(\"BOOKING_ID\")\n",
+        "test_noshow = test_noshow.drop(\"BOOKING_ID\")\n",
+        "\n",
         "# Define Pipeline\n",
         "noshow_pipeline = Pipeline([\n",
         "    (\"Classifier\", LogisticRegression(\n",
@@ -169,6 +177,10 @@
         "# Load Data\n",
         "df_upgrade = session.table(\"TROON_INTELLIGENCE.ANALYTICS.V_UPGRADE_FEATURES\")\n",
         "train_upgrade, test_upgrade = df_upgrade.random_split([0.8, 0.2], seed=42)\n",
+        "\n",
+        "# Drop ID columns not needed for training\n",
+        "train_upgrade = train_upgrade.drop(\"MEMBER_ID\")\n",
+        "test_upgrade = test_upgrade.drop(\"MEMBER_ID\")\n",
         "\n",
         "# Define Pipeline\n",
         "upgrade_pipeline = Pipeline([\n",
